--- a/public/main.css
+++ b/public/main.css
@@ -1,10 +1,11 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
 :root{
     --md-dark-color: #1d1d1d;
     --dark-color: #171717;
     --light-dark-color: #292929;
-    --yellow-color: #d4aa11;
+    --red: rgb(140, 52, 52);
 }
 *{
     padding: 0;
@@ -22,6 +23,69 @@ img{
     width: 100%;
     display: block;
 }
+/*-----*/
+.search-container {
+    background-color: var(--md-dark-color);
+    height: 100vh;
+    width: 600px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    }
+
+.search-element {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    padding-right: .5rem;
+    }
+.movie-poster {
+    position: absolute;
+    bottom: 50px;
+    right: 20px;
+    max-width: 300px;
+    margin: 0;
+}
+
+.movie-poster img {
+    max-width: 100%;
+    border: 4px solid #fff;
+}
+
+.favorite-movies-container {
+    padding: 10px;
+    background-color: var(--md-dark-color);
+    width: 100%;
+    transform: translateX(-150%);
+}
+
+.favorite-movies-container h4 {
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.favorite-movies-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.favorite-movies-list li {
+    color: #fff;
+    padding: 5px 0;
+    cursor: pointer;
+}
+
+.favorite-movies-list li:hover {
+    color: var(--yellow-color);
+}
+/*-----*/
 .wrapper{
     min-height: 100vh;
     background-color: var(--dark-color);
@@ -47,7 +111,7 @@ img{
 
 .logo {
     padding: 1rem 0;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid var(--red);
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
@@ -61,7 +125,10 @@ img{
     font-weight: bold;
 }
 .logo p span{
-    color: red;
+    color: var(--red);
+}
+span{
+    color: var(--red);
 }
 .search-element {
     display: flex;
@@ -148,7 +215,7 @@ img{
             box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 .search-list::-webkit-scrollbar-thumb{
-    background-color: var(--yellow-color);
+    background-color: var(--red);
     outline: none;
     border-radius: 10px;
 }
@@ -176,7 +243,7 @@ img{
 /* movie info stylings */
 .movie-title{
     font-size: 2rem;
-    color: var(--yellow-color);
+    color: var(--red);
 }
 .movie-misc-info{
     list-style-type: none;
@@ -195,7 +262,7 @@ img{
     font-weight: 500;
 }
 .movie-info .rated{
-    background-color: var(--yellow-color);
+    background-color: var(--red);
     padding: 0.4rem;
     margin: 0 0.4rem;
     border-radius: 3px;
@@ -220,7 +287,7 @@ img{
     margin: 1rem auto;
 }
 .movie-info .language{
-    color: var(--yellow-color);
+    color: var(--red);
     font-style: italic;
 }
 .movie-info .awards{
@@ -228,7 +295,7 @@ img{
     font-size: 0.9rem;
 }
 .movie-info .awards i{
-    color: var(--yellow-color);
+    color: var(--red);
     margin: 1rem 0.7rem 0 0;
 }
 
@@ -300,7 +367,7 @@ img{
 
 /* Add to Favorites button */
 .add-to-favorites {
-    background-color: var(--yellow-color);
+    background-color: var(--red);
     color: #fff;
     border: none;
     padding: 0.5rem 1rem;
@@ -308,3 +375,23 @@ img{
     cursor: pointer;
     margin-top: 1rem;
 }
+
+/* stars */
+
+.star-rating {
+    font-size: 24px;
+  }
+  
+  .star {
+    cursor: pointer;
+  }
+  
+  .star::after {
+    content: '★';
+  }
+  
+  .star.active::after {
+    color: gold;
+  }
+  
+  
